<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0f171e"
    tools:context=".fragments.home.details.series_detail.SeriesDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0f171e">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@drawable/gradient_bg"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_desc"/>

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/arrow_bg"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_desc"/>

        <ImageView
            android:id="@+id/favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/arrow_bg"
            android:padding="5dp"
            android:src="@drawable/ic_like_svgrepo_com"
            app:layout_constraintBottom_toBottomOf="@+id/back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_btn"
            android:contentDescription="@string/image_desc"/>

        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_bg"
            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:paddingRight="7dp"
            android:paddingBottom="5dp"
            tools:text="Action"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_bg"
            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:paddingRight="7dp"
            android:paddingBottom="5dp"
            tools:text="4.5"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="270dp"
            app:drawableStartCompat="@drawable/ic_baseline_star_18" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_bg"
            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:paddingRight="7dp"
            android:paddingBottom="5dp"
            tools:text="1h42m"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="288dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="time_tv,category_tv,rating_tv"
            app:flow_horizontalGap="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/time_tv"
            app:layout_constraintTop_toBottomOf="@+id/category_tv" />

        <TextView
            android:id="@+id/movie_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:justificationMode="inter_word"
            tools:text="In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available."
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/movie_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_desc"
            app:layout_constraintTop_toBottomOf="@+id/movie_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailer_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_trailers"
            tools:listitem="@layout/trailer_item" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/trailer_rv"
            app:layout_constraintTop_toBottomOf="@+id/trailer_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cast_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:listitem="@layout/cast_layout" />

        <TextView
            android:id="@+id/seasonsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seasons"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/cast_rv"
            app:layout_constraintTop_toBottomOf="@+id/cast_rv"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/seasons_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seasonsTxt"
            tools:listitem="@layout/item_seasons" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/recommendation"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/seasons_rv"
            app:layout_constraintTop_toBottomOf="@+id/seasons_rv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendation_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            tools:listitem="@layout/inner_row_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>